# hiproc

./: .gitignore  README.md  hiproc.toml  pyproject.toml  setup.sh  uninstall.sh
rust/hp/: Cargo.toml
rust/hp/src/: api.rs  api_integration_test.rs  config.rs  history.rs  main.rs  secrets.rs  templating.rs  templating_test.rs
src/hiproc/: cli.py  crud.py  database.py  main.py  models.py  schemas.py
src/hiproc/templates/: index.html
tests/: conftest.py  debug_test.py  test_api.py  test_crud.py  test_enhanced_crud.py  test_enhanced_features.py
