[package]
name = "hp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
exec = "0.3.1"
gethostname = "0.4.3"
config = "0.14.0"
home = "0.5.9"
anyhow = "1.0.86"
comfy-table = "7.1.1"
whoami = "1.5.1"
edit = "0.1.4"
skim = "0.10.4"
rpassword = "7.3.1"
regex = "1.10.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap_complete = "4.5.1"
shlex = "1.3.0"
serde_json = "1.0.143"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.8"
